# II4012_RetailMind

./: .dockerignore  .env.example  .gitignore  DOCSIBAY.md  GEMINI.md  README.md  WHATSAPPINTEGRATIONPLAN.md  docker-compose.backend.yml  docker-compose.dev.yml  eslint.config.js  index.html  init.md  package-lock.json  requirements.txt
backend/: .env.example  Dockerfile  package-lock.json  package.json  start-ngrok.sh
backend/data/: dummy_clean_transactions.csv  dummy_enriched_customer_analytics.csv  dummy_rfm_customers.csv  enriched_customer_analytics.csv  rfm_customer_table.csv
backend/inference/: Dockerfile  app.py  rfm.py  schemas.py
backend/model/: retail_ai_model_assets.joblib
backend/modelling/: generate_dummy_data.py  minggu1_data_rfm_cohort.ipynb  minggu2_model_cltv_ai.ipynb  retail_ai_model_assets.joblib  test_inference.py  train_pipeline.py  verify_v2.py
backend/src/: index.js
docs/: 01-overview.md  02-frontend.md  03-backend.md  04-inference-process.md  05-webhook-whatsapp.md  06-user-journey.md  07-campaign-ai-copywriting.md  08-operations.md  09-roadmap-risks.md  10-ai-agent-context.md  AIinput.md  README.md  docker.md
docs/archive/: CONTEXT.md  DOCSIBAY.md  DOC_ORCHESTRATION.md  GEMINI.md  HANDOF.md  HANDOFFINFERENCE.md  (+14 more)
frontend/: Dockerfile  eslint.config.js  package.json
model/inference/: Dockerfile  app.py  calibration.py  predictor.py  pyproject.toml  recommendations.py
model/inference/tests/: test_api.py  test_predictor.py
server/: .env.example  package-lock.json  package.json  start-ngrok.sh
src/: App.jsx  api.js  index.css
(+55 files in other folders)
