[project]
name = "retailmind-inference"
version = "0.1.0"
description = "Inference service for RetailMind customer analytics"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.2.0",
    "lifetimes>=0.11.3",
    "joblib>=1.3.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.6"
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "httpx>=0.24.0",
    "pytest-asyncio>=0.21.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
